--- a/docassemble/VTFeeWaiver/data/questions/VT_fee_waiver.yml
+++ b/docassemble/VTFeeWaiver/data/questions/VT_fee_waiver.yml
@@ -1,4 +1,5 @@
-#Working on getting public benefits and income fields to fill in
+#Work on getting expenses to show on PDF via ALExpense (update expense list and get rid of old expense code)
+#Work on getting self employment to fill in
 
 
 ---
@@ -16,6 +17,7 @@ objects:
   - jobs: ALItemizedJobList.using(complete_attribute="complete", ask_number=True)
   - public_benefits: ALIncomeList
   - other_incomes: ALIncomeList
+  - expenses: ALExpenseList.using(auto_gather=False, complete_attribute="exists")
 
 ---
 comment: |
@@ -96,6 +98,9 @@ code: |
   nav.set_section('intro')
   important_notes_to_user
   #user_ask_role
+
+  expenses.gathered
+  review_expenses
   
   nav.set_section('your_income')
   if public_benefits.selected_types.any_true():
@@ -139,10 +144,7 @@ code: |
 
   
   nav.set_section('your_expenses')
-  list_expenses
-  users1_expenses_monthly_total
-  users1_expenses_annual_total
-  user_sees_expenses_total
+
   set_progress(70)
   nav.set_section('your_assets')
   assets
@@ -209,7 +211,7 @@ data: !!omap
   - medicaid: "Medicaid"
   - medicare: "Medicare"
   - 3squaresvt: "3SquaresVT"
-  - ssi: "Supplemental Security Income​ (SSI)"
+  - ssi: "Supplemental Security Income (SSI)"
   - vhap: "VHAP"
   - housing_assistance: "Housing Assistance"   
   - other_benefit: "Other"
@@ -754,6 +756,39 @@ subquestion: |
     
   If this is not correct, go back and correct things.
 ---
+mandatory: True
+code: |
+  expenses.gathered
+---
+# "!!omap" makes these terms ordered: 
+# their order here will be their same order when shown to users.
+variable name: expense_terms
+data: !!omap
+  - rent: "Rent"
+  - mortgage: "Mortgage"
+  - food: "Food"
+  - utilities: "Utilities"
+  - clothing: "Clothing"
+  - credit cards: "Credit Card Payments"
+  - property tax: "Property Tax (State and Local)"
+  - other taxes: "Other taxes and fees related to your home"
+  - medical: "Medical costs (including insurance)"
+  - transportation: "Transportation costs"
+  - other: "Other"
+---
+id: expenses review
+question: |
+  Review your expenses
+subquestion: |
+  Here is what you've told us about your monthly expenses. You can add more or continue
+  to the next question.
+
+  ${ expenses.table }
+
+  ${ expenses.add_action() }
+continue button field: review_expenses
+
+---
 id: Expenses
 continue button field: list_expenses
 question: |
@@ -1266,7 +1301,7 @@ review:
       
       % if public_benefits.there_are_any:
         % for item in public_benefits:
-          - ${ item.source } ${ item.value }, ${ item.times_per_year } times a year
+          - ${ item.display_name } ${ item.value }, ${ item.times_per_year } times a year
         % endfor
       % endif
 
@@ -1331,44 +1366,15 @@ review:
       
       
   - note: |
-      **Expenses**      
-  - Edit: users1_expenses_rent_mortgage_monthly_amount
+      **Expenses**   
+  - Edit: expenses.revisit
     button: |
-      **Rent or mortgage**:
-      ${ currency(users1_expenses_rent_mortgage_monthly_amount) }
-  - Edit: users1_expenses_electric_monthly_amount
-    button: |
-      **Electric**:
-      ${ currency(users1_expenses_electric_monthly_amount) }
-  - Edit: users1_income_employment_monthly_amount
-    button: |
-      **Wages**:
-      ${ currency(users1_income_employment_monthly_amount) }
-  - Edit: users1_expenses_phone_monthly_amount
-    button: |
-      **Phone**:
-      ${ currency(users1_expenses_phone_monthly_amount) }
-  - Edit: users1_expenses_fuel_monthly_amount
-    button: |
-      **Fuel**:
-      ${ currency(users1_expenses_fuel_monthly_amount) }
-  - Edit: users1_expenses_food_monthly_amount
-    button: |
-      **Food**:
-      ${ currency(users1_expenses_food_monthly_amount) }
-  - Edit: users1_expenses_clothes_monthly_amount
-    button: |
-      **Clothes**:
-      ${ currency(users1_expenses_clothes_monthly_amount) }
-  - Edit: users1_expenses_medical_monthly_amount
-    button: |
-      **Medical / medicine**:
-      ${ currency(users1_expenses_medical_monthly_amount) }
-  - Edit: users1_expenses_child_support_monthly_amount
-    button: |
-      **Child support**:
-      ${ currency(users1_expenses_child_support_monthly_amount) }
+      **Expenses**:
 
+      % for item in expenses:
+      * ${ item.display_name }: ${ currency(item.value) }
+      % endfor
+      
 
   - Edit: users1_expenses_auto_loan_monthly_amount
     button: |
@@ -1619,7 +1625,7 @@ attachments:
       - "users1_benefits": |
           % if public_benefits.there_are_any:
             % for item in public_benefits:
-            ${ item.source }
+            ${ item.display_name }
             % endfor
           % endif
       - "users1_benefits_monthly_amount": ${ currency(public_benefits.total(times_per_year=12)) }
