--- a/docassemble/VTFeeWaiver/data/questions/VT_fee_waiver.yml
+++ b/docassemble/VTFeeWaiver/data/questions/VT_fee_waiver.yml
@@ -1,4 +1,5 @@
 #Work on getting expenses to show on PDF via ALExpense (update expense list and get rid of old expense code)
+#For other financial forms, need to ask how much they pay and how much someone else pays for the expenses. When user is filling out fee waiver only, just need to know what they pay, so keep it simple.
 #Work on getting self employment to fill in
 
 
@@ -17,7 +18,7 @@ objects:
   - jobs: ALItemizedJobList.using(complete_attribute="complete", ask_number=True)
   - public_benefits: ALIncomeList
   - other_incomes: ALIncomeList
-  - expenses: ALExpenseList.using(auto_gather=False, complete_attribute="exists")
+  - expenses: ALExpenseList
 
 ---
 comment: |
@@ -99,7 +100,9 @@ code: |
   important_notes_to_user
   #user_ask_role
 
-  expenses.gathered
+  if expenses.selected_types.any_true():
+    expenses.there_are_any = True
+    expenses.gathered  
   review_expenses
   
   nav.set_section('your_income')
@@ -256,6 +259,7 @@ fields:
       is: other
   - Times per year you receive this income: public_benefits[i].times_per_year
     input type: radio
+    default: 12
     code: |
       times_per_year_list
   - Amount of income: public_benefits[i].value
@@ -755,26 +759,79 @@ subquestion: |
 
     
   If this is not correct, go back and correct things.
+
 ---
-mandatory: True
-code: |
-  expenses.gathered
----
-# "!!omap" makes these terms ordered: 
+# "!!omap" makes these terms ordered
 # their order here will be their same order when shown to users.
 variable name: expense_terms
 data: !!omap
   - rent: "Rent"
   - mortgage: "Mortgage"
   - food: "Food"
-  - utilities: "Utilities"
+  - electric: "Electric"
+  - phone: "Phone"
+  - fuel: "Fuel (heat and/or gas)"
   - clothing: "Clothing"
-  - credit cards: "Credit Card Payments"
-  - property tax: "Property Tax (State and Local)"
-  - other taxes: "Other taxes and fees related to your home"
-  - medical: "Medical costs (including insurance)"
-  - transportation: "Transportation costs"
-  - other: "Other"
+  - property tax: "Property taxes"
+  - medical: "Medical costs"
+  - health insurance: "Health insurance"
+  - auto insurance: "Auto insurance"
+  - auto loan: "Auto loan payment"
+  - child support: "Child support payment"
+  - other: "Other expenses"
+---
+
+generic object: ALExpenseList
+#expenses
+id: expenses types
+question: |
+  What kind of expenses do you have?
+fields:
+  - no label: expenses.selected_types
+    datatype: checkboxes
+    code: |
+      expense_terms
+---
+generic object: ALExpenseList
+need:
+  - x[i].source
+  - x[i].display_name
+id: expense information, prefilled
+question: |
+  How much do you spend on ${ x[i].display_name.lower() }?
+subquestion: |
+  If you have more than one ${ x[i].display_name.lower() }
+  expense in your household, you'll have a chance to add another later on.
+fields:
+  - Amount: x[i].value
+    datatype: currency
+  - How often do you pay this amount?: x[i].times_per_year
+    input type: radio
+    default: 12
+    code: |
+      times_per_year_for_expenses
+---
+generic object: ALExpenseList
+id: expense information
+question: |
+  How much do you spend on your ${ ordinal(i) } household expense?
+fields: 
+  - Type of expense: x[i].source
+    code: |
+      expense_terms_ordered
+  - Other (explain): x[i].source
+    show if:
+      variable: x[i].source
+      is: other
+  - Amount: x[i].value
+    datatype: currency
+  - How often do you pay this amount?: x[i].times_per_year
+    input type: radio
+    default: 12
+    code: |
+      times_per_year_for_expenses
+validation code: |
+  x[i].display_name = expense_terms.get(x[i].source, x[i].source)
 ---
 id: expenses review
 question: |
@@ -788,122 +845,6 @@ subquestion: |
   ${ expenses.add_action() }
 continue button field: review_expenses
 
----
-id: Expenses
-continue button field: list_expenses
-question: |
-  Expenses
-subquestion: |
-  Select the expenses you have right now. Then enter the amount of each of those expenses **per month**.
-fields:
-  - "Rent or mortgage": user_expense_rent_mortgage
-    datatype: yesno    
-  - "Amount": users1_expenses_rent_mortgage_monthly_amount
-    datatype: currency
-    min: 0
-    show if: user_expense_rent_mortgage
-  - "Electric": user_expense_electric
-    datatype: yesno     
-  - "Amount": users1_expenses_electric_monthly_amount
-    datatype: currency
-    min: 0
-    show if: user_expense_electric
-  - "Phone": user_expense_phone
-    datatype: yesno    
-  - "Amount": users1_expenses_phone_monthly_amount
-    datatype: currency
-    min: 0
-    show if: user_expense_phone
-  - "Fuel to heat your home, water or to cook": user_expense_fuel
-    datatype: yesno    
-  - "Amount": users1_expenses_fuel_monthly_amount
-    datatype: currency
-    min: 0
-    show if: user_expense_fuel
-  - "Food": user_expense_food
-    datatype: yesno    
-  - "Amount": users1_expenses_food_monthly_amount
-    datatype: currency
-    min: 0
-    show if: user_expense_food
-  - "Clothes": user_expense_clothes
-    datatype: yesno    
-  - "Amount": users1_expenses_clothes_monthly_amount
-    datatype: currency
-    min: 0
-    show if: user_expense_clothes
-  - "Medical / medicine": user_expense_medicine
-    datatype: yesno
-  - "Amount": users1_expenses_medical_monthly_amount
-    datatype: currency
-    min: 0
-    show if: user_expense_medicine
-  - "Child support": user_expense_child_support
-    datatype: yesno    
-  - "Amount": users1_expenses_child_support_monthly_amount
-    datatype: currency
-    min: 0
-    show if: user_expense_child_support
-  - "Auto loan": user_expense_child_auto_loan
-    datatype: yesno    
-  - "Amount": users1_expenses_auto_loan_monthly_amount
-    datatype: currency
-    min: 0
-    show if: user_expense_child_auto_loan
-  - "Property taxes": user_expense_property_tax
-    datatype: yesno  
-  - "Amount": users1_expenses_property_tax_monthly_amount
-    datatype: currency
-    min: 0
-    show if: user_expense_property_tax
-  - "All kinds of insurance": user_expense_insurance
-    datatype: yesno    
-  - "Amount":  users1_expenses_all_insurance_monthly_amount
-    datatype: currency
-    min: 0
-    show if: user_expense_insurance
-  - "Other": user_expense_other
-    datatype: yesno    
-  - "Amount": users1_expenses_other_monthly_amount
-    datatype: currency
-    min: 0
-    show if: user_expense_other
-  - "**I don't have any expenses**": user_expense_none
-    datatype: yesno
----
-mandatory: True
-code: | 
-  users1_expenses_monthly_total = sum_if_defined('users1_expenses_rent_mortgage_monthly_amount', 
-      'users1_expenses_electric_monthly_amount',
-      'users1_expenses_phone_monthly_amount',
-      'users1_expenses_fuel_monthly_amount',
-      'users1_expenses_food_monthly_amount',
-      'users1_expenses_clothes_monthly_amount',
-      'users1_expenses_medical_monthly_amount',
-      'users1_expenses_child_support_monthly_amount',
-      'users1_expenses_auto_loan_monthly_amount',
-      'users1_expenses_property_tax_monthly_amount',
-      'users1_expenses_all_insurance_monthly_amount',    
-      'users1_expenses_other_monthly_amount')
----
-###To multiply for annual expenses###
-mandatory: True
-code: |
-  users1_expenses_annual_total = sum_if_defined('users1_expenses_monthly_total') * 12
----
-id: Expenses monthly and annual totals
-mandatory: True
-continue button field: user_sees_expenses_total
-question: |
-  Total expenses
-subquestion: |
-  You said that your total expenses each month are:
-    ${ currency(users1_expenses_monthly_total) }
-    
-  Therefore, your total expenses each year are:
-    ${ currency(users1_expenses_annual_total) }
-    
-  If this is not correct, go back one screen.
   
 ---
 #How check the box on form if they answer any of the asset questions???
